Refactors UserDetailsController implementation with code

--- a/Scripts/ImagesDocumentation/output/index.html
+++ b/Scripts/ImagesDocumentation/output/index.html
@@ -445,6 +445,13 @@
                     <img src="https://github.com/nunogoncalves/iOS-OctoPodium/blob/master/OctoPodiumTests/SnapshotTesting/Snapshots/Reference_64//UserInfoView/testCommon@2x.png?raw=true" class="component">
                   </div>
                 
+                  <div style="padding-right: 20px; max-width: 250px">
+                    <div>
+                      <p align="center">Common@3x.png</p>
+                    </div>
+                    <img src="https://github.com/nunogoncalves/iOS-OctoPodium/blob/master/OctoPodiumTests/SnapshotTesting/Snapshots/Reference_64//UserInfoView/testCommon@3x.png?raw=true" class="component">
+                  </div>
+                
               </div>
             </div>
         </li>
